Add GC suggest